--- a/packages/ibm-products/src/components/APIKeyModal/APIKeyModal.mdx
+++ b/packages/ibm-products/src/components/APIKeyModal/APIKeyModal.mdx
@@ -29,7 +29,11 @@ export const customImportsArr = [
   additionalActions={[
       {
         title: 'Open in Stackblitz',
-        onClick: () => stackblitzPrefillConfig(stories.Generate,[],customFunctionArr, stories.default.parameters.styles),
+        onClick: () => stackblitzPrefillConfig({
+              'story': stories.Generate,
+              'customFunctionDefs': customFunctionArr, 
+              'styles': stories.default.parameters.styles
+            }),
       },
     ]}>
 </Canvas>
@@ -41,7 +45,11 @@ export const customImportsArr = [
   additionalActions={[
       {
         title: 'Open in Stackblitz',
-        onClick: () => stackblitzPrefillConfig(stories.GenerateWithError,[],customFunctionArr, stories.default.parameters.styles),
+        onClick: () => stackblitzPrefillConfig({
+          'story': stories.GenerateWithError,
+          'customFunctionDefs': customFunctionArr, 
+          'styles': stories.default.parameters.styles
+        }),
       },
     ]}>
 </Canvas>
@@ -53,7 +61,12 @@ export const customImportsArr = [
   additionalActions={[
       {
         title: 'Open in Stackblitz',
-        onClick: () => stackblitzPrefillConfig(stories.InstantGenerate,customImportsArr,customFunctionArr, stories.default.parameters.styles),
+        onClick: () => stackblitzPrefillConfig({
+          'story': stories.InstantGenerate,
+          'customImports': customImportsArr,
+          'customFunctionDefs': customFunctionArr, 
+          'styles': stories.default.parameters.styles
+        }),
       },
     ]}>
 </Canvas>
@@ -65,7 +78,11 @@ export const customImportsArr = [
   additionalActions={[
       {
         title: 'Open in Stackblitz',
-        onClick: () => stackblitzPrefillConfig(stories.CustomGenerate,[],customFunctionArr, stories.default.parameters.styles),
+        onClick: () => stackblitzPrefillConfig({
+          'story': stories.CustomGenerate,
+          'customFunctionDefs': customFunctionArr, 
+          'styles': stories.default.parameters.styles
+        }),
       },
     ]}>
 </Canvas>
@@ -77,7 +94,11 @@ export const customImportsArr = [
   additionalActions={[
       {
         title: 'Open in Stackblitz',
-        onClick: () => stackblitzPrefillConfig(stories.Edit,[],customFunctionArr, stories.default.parameters.styles),
+        onClick: () => stackblitzPrefillConfig({
+          'story': stories.Edit, 
+          'customFunctionDefs': customFunctionArr, 
+          'styles': stories.default.parameters.styles
+        }),
       },
     ]}>
 </Canvas>
@@ -89,7 +110,11 @@ export const customImportsArr = [
   additionalActions={[
       {
         title: 'Open in Stackblitz',
-        onClick: () => stackblitzPrefillConfig(stories.EditWithError,[],customFunctionArr, stories.default.parameters.styles),
+        onClick: () => stackblitzPrefillConfig({
+          'story': stories.EditWithError,
+          'customFunctionDefs': customFunctionArr, 
+          'styles': stories.default.parameters.styles
+        }),
       },
     ]}>
 </Canvas>
@@ -101,7 +126,11 @@ export const customImportsArr = [
   additionalActions={[
       {
         title: 'Open in Stackblitz',
-        onClick: () => stackblitzPrefillConfig(stories.CustomEdit,[],customFunctionArr, stories.default.parameters.styles),
+        onClick: () => stackblitzPrefillConfig({
+          'story': stories.CustomEdit,
+          'customFunctionDefs': customFunctionArr, 
+          'styles': stories.default.parameters.styles
+        }),
       },
     ]}>
 </Canvas>
