--- a/packages/ibm-products/src/components/FullPageError/FullPageError.mdx
+++ b/packages/ibm-products/src/components/FullPageError/FullPageError.mdx
@@ -33,7 +33,10 @@ errors, and not caused by server connectivity issues.
   additionalActions={[
     {
       title: 'Open in Stackblitz',
-      onClick: () => stackblitzPrefillConfig(stories.fullPageError, [], [], stories.default.parameters.styles),
+      onClick: () => stackblitzPrefillConfig({
+        'story': stories.fullPageError, 
+        'styles': stories.default.parameters.styles
+      }),
     },
   ]}
 />
@@ -48,7 +51,10 @@ access the page or data, or when login is required.
   additionalActions={[
     {
       title: 'Open in Stackblitz',
-      onClick: () => stackblitzPrefillConfig(stories.fullPageError403, [], [], stories.default.parameters.styles),
+      onClick: () => stackblitzPrefillConfig({
+        'story': stories.fullPageError403,
+        'styles': stories.default.parameters.styles
+      }),
     },
   ]}
 />
@@ -64,7 +70,10 @@ broken links.
   additionalActions={[
     {
       title: 'Open in Stackblitz',
-      onClick: () => stackblitzPrefillConfig(stories.fullPageError404, [], [], stories.default.parameters.styles),
+      onClick: () => stackblitzPrefillConfig({
+        'story': stories.fullPageError404, 
+        'styles': stories.default.parameters.styles
+      }),
     },
   ]}
 />
