--- a/packages/ibm-products-web-components/src/components/truncated-text/truncated-text.mdx
+++ b/packages/ibm-products-web-components/src/components/truncated-text/truncated-text.mdx
@@ -1,13 +1,13 @@
 import { ArgTypes, Markdown, Meta } from '@storybook/blocks';
 import { Canvas } from '@storybook/addon-docs';
 import { cdnJs, cdnCss } from '../../globals/internal/storybook-cdn';
-import * as TruncatedString from './truncated-string.stories';
+import * as TruncatedText from './truncated-text.stories';
 
-<Meta of={TruncatedString} />
+<Meta of={TruncatedText} />
 
-# TruncatedString
+# TruncatedText
 
-The `TruncatedString` component truncates text based on a specified number of
+The `TruncatedText` component truncates text based on a specified number of
 lines, provided via a prop. It offers two configurable options for revealing the
 full content:
 
@@ -19,17 +19,17 @@ collapsible "Read more" / "Read less" toggles. these labels can be customized
 with `expand-label`, `collapse-label` attributes on the component
 
 > 💡 Check our
-> [Stackblitz](https://stackblitz.com/github/carbon-design-system/ibm-products/tree/main/packages/ibm-products-web-components/examples/truncated-string)
+> [Stackblitz](https://stackblitz.com/github/carbon-design-system/ibm-products/tree/main/packages/ibm-products-web-components/examples/truncated-text)
 > example implementation.
-> [![Edit carbon-web-components](https://developer.stackblitz.com/img/open_in_stackblitz.svg)](https://stackblitz.com/github/carbon-design-system/ibm-products/tree/main/packages/ibm-products-web-components/examples/truncated-string)
+> [![Edit carbon-web-components](https://developer.stackblitz.com/img/open_in_stackblitz.svg)](https://stackblitz.com/github/carbon-design-system/ibm-products/tree/main/packages/ibm-products-web-components/examples/truncated-text)
 
 ## Default with tooltip
 
-<Canvas of={TruncatedString.WithTooltip} />
+<Canvas of={TruncatedText.WithTooltip} />
 
 ## With expand
 
-<Canvas of={TruncatedString.WithExpand} />
+<Canvas of={TruncatedText.WithExpand} />
 
 ## Getting started
 
@@ -38,19 +38,19 @@ Here's a quick example to get you started.
 ### JS (via import)
 
 ```javascript
-import '@carbon/ibm-products-web-components/es/components/truncated-string/index.js';
+import '@carbon/ibm-products-web-components/es/components/truncated-text/index.js';
 ```
 
 ### HTML
 
 ```html
-<c4p-truncated-string
+<c4p-truncated-text
   value="Buttons are used to initialize an action, either in the background or foreground of an experience. There are several kinds of buttons. Primary buttons should be used for the principal call to action on the page. Secondary buttons should be used for secondary actions on each page. Danger buttons should be used for a negative action (such as Delete) on the page. Modify the behavior of the button by changing its event properties. Small buttons may be used when there is not enough space for a regular-sized button. This issue is most often found in tables. Small buttons should have three words or fewer."
   lines="2"
   with="tooltip"
-></c4p-truncated-string>
+></c4p-truncated-text>
 ```
 
-## `<c4p-truncated-string>` attributes, properties and events
+## `<c4p-truncated-text>` attributes, properties and events
 
-<ArgTypes of="c4p-truncated-string" />
+<ArgTypes of="c4p-truncated-text" />
