feat: add stackblitz links to docs

--- a/packages/ibm-products/src/components/InterstitialScreen/InterstitialScreen.mdx
+++ b/packages/ibm-products/src/components/InterstitialScreen/InterstitialScreen.mdx
@@ -11,6 +11,7 @@ import { InterstitialScreen } from '.';
 - [Overview](#overview)
 - [Expected Composability](#expected-composability)
 - [About Onboarding](#about-onboarding)
+- [Stackblitz Examples](#examples)
 - [Component API](#component-api)
 
 ## Overview
@@ -71,6 +72,18 @@ explain, educate, and cultivate novice users into high-functioning power users.
 </InterstitialScreen>;
 
 ```
+## Stackblitz Examples
+
+#### Example using sample design from docs page
+[![Example 1](https://developer.stackblitz.com/img/open_in_stackblitz.svg)](https://stackblitz.com/github/carbon-design-system/ibm-products/tree/main/examples/carbon-for-ibm-products/InterstitialScreen)
+
+#### Example using steppedAnimatedMedia and lottie web
+[![Example 1](https://developer.stackblitz.com/img/open_in_stackblitz.svg)](https://stackblitz.com/github/carbon-design-system/ibm-products/tree/main/examples/carbon-for-ibm-products/InterstitialScreenWithAnimatedMedia)
+
+#### Example using InterstitialView and InterstitialViewModule components
+[![Example 1](https://developer.stackblitz.com/img/open_in_stackblitz.svg)](https://stackblitz.com/github/carbon-design-system/ibm-products/tree/main/examples/carbon-for-ibm-products/InterstitialScreenView)
+
+
 
 ## Component API
 
