--- a/packages/ibm-products-web-components/src/components/import-modal/import-modal.mdx
+++ b/packages/ibm-products-web-components/src/components/import-modal/import-modal.mdx
@@ -21,9 +21,7 @@ To build this pattern, we recommend including the following components:
 - [cds-text-input](https://web-components.carbondesignsystem.com/?path=/docs/components-text-input)
 - [cds-button](https://web-components.carbondesignsystem.com/?path=/docs/components-button)
 
-All of these carbon components are used within a wrapper component
-`import-modal` to handle state management required for the import modal’s
-functionality.
+These components are used within an `import-modal` wrapper component to handle state management.
 
 > 💡 Check our
 > [Stackblitz](https://stackblitz.com/github/carbon-design-system/ibm-products/tree/main/packages/ibm-products-web-components/examples/import-modal)
@@ -36,8 +34,6 @@ functionality.
 Here's a quick example to get you started.
 
 ### HTML
-
-### Default
 
 ```html
 <cds-modal>
@@ -68,7 +64,7 @@ Here's a quick example to get you started.
       ></cds-text-input>
       <cds-button
         .kind="primary"
-        size="sm"
+        size="md"
         .type="Submit"
         @click="${handleImportFile}"
       >
