chore(DeleteAndRemovePattern): remove cspell words

--- a/packages/ibm-products-web-components/src/patterns/delete-and-remove/delete-and-remove.mdx
+++ b/packages/ibm-products-web-components/src/patterns/delete-and-remove/delete-and-remove.mdx
@@ -162,12 +162,12 @@ Here's a quick example to get you started.
     <ul class="no-bullets">
       <li><cds-link> Route1_name ${launchSVG} </cds-link></li>
       <li><cds-link> Hpt-392-ser ${launchSVG} </cds-link></li>
-      <li><cds-link> MKtps_02_094 ${launchSVG} </cds-link></li>
+      <li><cds-link> Route2_name ${launchSVG} </cds-link></li>
     </ul>
 
     <p>
       Note - the following selected items cannot be deleted:
-      <cds-link>Gigstore-0034</cds-link>, <cds-link>Gigstore-0058</cds-link>
+      <cds-link>Route3_name</cds-link>, <cds-link>Route4_name</cds-link>
     </p>
   </cds-modal-body>
   <cds-modal-footer>
