fix(DeleteAndRemovePattern): import icons from carbon package

--- a/packages/ibm-products-web-components/src/patterns/delete-and-remove/delete-and-remove.mdx
+++ b/packages/ibm-products-web-components/src/patterns/delete-and-remove/delete-and-remove.mdx
@@ -160,9 +160,9 @@ Here's a quick example to get you started.
       >3 items:</cds-checkbox
     >
     <ul class="no-bullets">
-      <li><cds-link> Route1_name ${launchSVG} </cds-link></li>
-      <li><cds-link> Hpt-392-ser ${launchSVG} </cds-link></li>
-      <li><cds-link> Route2_name ${launchSVG} </cds-link></li>
+      <li><cds-link> Route1_name ${Launch16} </cds-link></li>
+      <li><cds-link> Hpt-392-ser ${Launch16} </cds-link></li>
+      <li><cds-link> Route2_name ${Launch16} </cds-link></li>
     </ul>
 
     <p>
@@ -270,7 +270,7 @@ Here's a quick example to get you started.
   size="md"
   @click="${this._onDeleteButtonClick}"
 >
-  Delete ${trashCanSVG}
+  Delete ${TrashCan16}
 </cds-button>
 <cds-toast-notification
   class="notification"
