--- a/packages/ibm-products/src/components/ExportModal/ExportModal.mdx
+++ b/packages/ibm-products/src/components/ExportModal/ExportModal.mdx
@@ -1,7 +1,7 @@
 import { Story, Controls, Source, Canvas } from '@storybook/addon-docs';
 import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { ExportModal } from '.';
-import * as ExportModalStories from './ExportModal.stories';
+import * as stories from './ExportModal.stories';
 import { stackblitzPrefillConfig } from '../../../previewer/codePreviewer';
 import wait from '../../global/js/utils/wait';
 
@@ -24,11 +24,15 @@ Modal dialog version of the export pattern.
 ### Standard
 
 <Canvas
-  of={ExportModalStories.Standard}
+  of={stories.Standard}
   additionalActions={[
       {
         title: 'Open in Stackblitz',
-        onClick: () => stackblitzPrefillConfig(ExportModalStories.Standard,[],customFunctionArr),
+        onClick: () => stackblitzPrefillConfig({
+          'story': stories.Standard,
+          'customFunctionDefs': customFunctionArr, 
+          'styles': stories.default.parameters.styles
+      }),
       },
     ]}>
 </Canvas>
@@ -37,11 +41,15 @@ Modal dialog version of the export pattern.
 ### With Extension Validation
 
 <Canvas
-  of={ExportModalStories.WithExtensionValidation}
+  of={stories.WithExtensionValidation}
   additionalActions={[
       {
         title: 'Open in Stackblitz',
-        onClick: () => stackblitzPrefillConfig(ExportModalStories.WithExtensionValidation,[],customFunctionArr),
+        onClick: () => stackblitzPrefillConfig({
+          'story': stories.WithExtensionValidation,
+          'customFunctionDefs': customFunctionArr, 
+          'styles': stories.default.parameters.styles
+      }),
       },
     ]}>
 </Canvas>
@@ -49,11 +57,15 @@ Modal dialog version of the export pattern.
 ### With Preformatted Extensions
 
 <Canvas
-  of={ExportModalStories.WithPreformattedExtensions}
+  of={stories.WithPreformattedExtensions}
   additionalActions={[
       {
         title: 'Open in Stackblitz',
-        onClick: () => stackblitzPrefillConfig(ExportModalStories.WithPreformattedExtensions,[],customFunctionArr),
+        onClick: () => stackblitzPrefillConfig({
+          'story': stories.WithPreformattedExtensions,
+          'customFunctionDefs': customFunctionArr, 
+          'styles': stories.default.parameters.styles
+      }),
       },
     ]}>
 </Canvas>
