--- a/packages/ibm-products/src/components/ExportModal/ExportModal.mdx
+++ b/packages/ibm-products/src/components/ExportModal/ExportModal.mdx
@@ -9,7 +9,9 @@ export const customFunctionArr = [
   wait,
 ];
 
-# About Modal
+# Export Modal
+
+[Export usage guidelines](https://pages.github.ibm.com/carbon/ibm-products/components/export/usage/) | [Carbon Modal usage guidelines](https://www.carbondesignsystem.com/components/modal/usage) | [Carbon Modal documentation](https://react.carbondesignsystem.com/?path=/docs/components-modal)
 
 ## Table of Contents
 
