feat(openStackblitz): updated doc

--- a/packages/ibm-products/src/components/AboutModal/AboutModal.mdx
+++ b/packages/ibm-products/src/components/AboutModal/AboutModal.mdx
@@ -12,6 +12,8 @@ import { stackblitzPrefillConfig } from '../../../previewer/codePreviewer';
 
 - [Overview](#overview)
 - [Example usage](#example-usage)
+  - [About Modal](#about-modal-1)
+  - [About Modal With All Props Set](#about-modal-with-all-props-set)
 - [Component API](#component-api)
 
 ## Overview
