--- a/packages/ibm-products/src/components/ExportModal/ExportModal.mdx
+++ b/packages/ibm-products/src/components/ExportModal/ExportModal.mdx
@@ -5,18 +5,23 @@ import * as stories from './ExportModal.stories';
 import { stackblitzPrefillConfig } from '../../../previewer/codePreviewer';
 import wait from '../../global/js/utils/wait';
 
-export const customFunctionArr = [
-  wait,
-];
+export const customFunctionArr = [wait];
 
 # Export Modal
 
-[Export usage guidelines](https://pages.github.ibm.com/carbon/ibm-products/components/export/usage/) | [Carbon Modal usage guidelines](https://www.carbondesignsystem.com/components/modal/usage) | [Carbon Modal documentation](https://react.carbondesignsystem.com/?path=/docs/components-modal)
+[Export usage guidelines](https://pages.github.ibm.com/carbon/ibm-products/components/export/usage/)
+|
+[Carbon Modal usage guidelines](https://www.carbondesignsystem.com/components/modal/usage)
+|
+[Carbon Modal documentation](https://react.carbondesignsystem.com/?path=/docs/components-modal)
 
 ## Table of Contents
 
 - [Overview](#overview)
 - [Example usage](#example-usage)
+  - [Standard](#standard)
+  - [With Extension Validation](#with-extension-validation)
+  - [With Preformatted Extensions](#with-preformatted-extensions)
 - [Component API](#component-api)
 
 ## Overview
@@ -28,49 +33,51 @@ Modal dialog version of the export pattern.
 <Canvas
   of={stories.Standard}
   additionalActions={[
-      {
-        title: 'Open in Stackblitz',
-        onClick: () => stackblitzPrefillConfig({
-          'story': stories.Standard,
-          'customFunctionDefs': customFunctionArr, 
-          'styles': stories.default.parameters.styles
-      }),
-      },
-    ]}>
-</Canvas>
-
+    {
+      title: 'Open in Stackblitz',
+      onClick: () =>
+        stackblitzPrefillConfig({
+          story: stories.Standard,
+          customFunctionDefs: customFunctionArr,
+          styles: stories.default.parameters.styles,
+        }),
+    },
+  ]}
+></Canvas>
 
 ### With Extension Validation
 
 <Canvas
   of={stories.WithExtensionValidation}
   additionalActions={[
-      {
-        title: 'Open in Stackblitz',
-        onClick: () => stackblitzPrefillConfig({
-          'story': stories.WithExtensionValidation,
-          'customFunctionDefs': customFunctionArr, 
-          'styles': stories.default.parameters.styles
-      }),
-      },
-    ]}>
-</Canvas>
+    {
+      title: 'Open in Stackblitz',
+      onClick: () =>
+        stackblitzPrefillConfig({
+          story: stories.WithExtensionValidation,
+          customFunctionDefs: customFunctionArr,
+          styles: stories.default.parameters.styles,
+        }),
+    },
+  ]}
+></Canvas>
 
 ### With Preformatted Extensions
 
 <Canvas
   of={stories.WithPreformattedExtensions}
   additionalActions={[
-      {
-        title: 'Open in Stackblitz',
-        onClick: () => stackblitzPrefillConfig({
-          'story': stories.WithPreformattedExtensions,
-          'customFunctionDefs': customFunctionArr, 
-          'styles': stories.default.parameters.styles
-      }),
-      },
-    ]}>
-</Canvas>
+    {
+      title: 'Open in Stackblitz',
+      onClick: () =>
+        stackblitzPrefillConfig({
+          story: stories.WithPreformattedExtensions,
+          customFunctionDefs: customFunctionArr,
+          styles: stories.default.parameters.styles,
+        }),
+    },
+  ]}
+></Canvas>
 
 ## Component API
 
