--- a/packages/ibm-products-web-components/src/components/options-tile/options-tile.mdx
+++ b/packages/ibm-products-web-components/src/components/options-tile/options-tile.mdx
@@ -14,8 +14,6 @@ import * as OptionsTileStories from './options-tile.stories';
 
 An options tile can contain information, controls or tables which, when collapsed, are summarized. It can be paired with a toggle to quickly enable or disable the option.
 
-[Options Tile guidelines (IBM internal)](https://stackblitz.com/github/carbon-design-system/ibm-products/tree/main/packages/ibm-products-web-components/examples/options-tile)
-
 ## Getting started
 
 Here's a quick example to get you started.
@@ -30,8 +28,31 @@ import '@carbon/ibm-products-web-components/es/components/options-tile/index.js'
 ### HTML
 
 ```html
-<c4p-options-tile>
+<c4p-options-tile
+  id="my-tile"
+  size="lg"
+  title="A title describing all included content."
+  titleId="my-title-title"
+>
+  <div slot="summary">
+    <span>A summary of the current state of content.</span>
+  </div>
+  <div slot="body">
+    Additional detail or content will be shown when expanded.
+  </div>
 </c4p-options-tile>
+
+<script>
+  document.addEventListener('DOMContentLoaded', () => {
+    const tile = document.querySelector('c4p-options-tile');
+    tile.addEventListener('c4p-options-tile-open', () => {
+      tile?.setAttribute('open', 'true');
+    });
+    tile.addEventListener('c4p-options-tile-close', () => {
+      tile?.removeAttribute('open');
+    });
+  });
+</script>
 ```
 
 ## `<c4p-options-tile>` attributes, properties and events
