--- a/packages/ibm-products-web-components/src/components/truncated-text/truncated-text.mdx
+++ b/packages/ibm-products-web-components/src/components/truncated-text/truncated-text.mdx
@@ -11,7 +11,7 @@ The `TruncatedText` component truncates text based on a specified number of
 lines, provided via a prop. It offers two configurable options for revealing the
 full content:
 
-Tooltip Mode `with="tooltip"`: Displays the full text in a tooltip overlay on
+- Tooltip mode `with="tooltip"`: Displays the full text in a tooltip overlay on
 hover.
 
 Expandable Mode `with="expand"`: Reveals the complete content through
