--- a/packages/ibm-products-web-components/src/components/truncated-text/truncated-text.mdx
+++ b/packages/ibm-products-web-components/src/components/truncated-text/truncated-text.mdx
@@ -15,8 +15,8 @@ full content:
 hover.
 
 Expandable Mode `with="expand"`: Reveals the complete content through
-collapsible "Read more" / "Read less" toggles. these labels can be customized
-with `expand-label`, `collapse-label` attributes on the component
+collapsible “Read more” / “Read less” toggles. These labels can be customized
+using the `expand-label` and `collapse-label` attributes on the component.
 
 > 💡 Check our
 > [Stackblitz](https://stackblitz.com/github/carbon-design-system/ibm-products/tree/main/packages/ibm-products-web-components/examples/truncated-text)
