--- a/packages/ibm-products-web-components/src/components/truncated-text/truncated-text.mdx
+++ b/packages/ibm-products-web-components/src/components/truncated-text/truncated-text.mdx
@@ -14,7 +14,7 @@ full content:
 - Tooltip mode `with="tooltip"`: Displays the full text in a tooltip overlay on
 hover.
 
-Expandable Mode `with="expand"`: Reveals the complete content through
+- Expandable mode `with="expand"`: Reveals the complete content through
 collapsible “Read more” / “Read less” toggles. These labels can be customized
 using the `expand-label` and `collapse-label` attributes on the component.
 
