fix: review comments

--- a/packages/ibm-products-web-components/src/components/truncated-text/truncated-text.mdx
+++ b/packages/ibm-products-web-components/src/components/truncated-text/truncated-text.mdx
@@ -7,16 +7,16 @@ import * as TruncatedText from './truncated-text.stories';
 
 # TruncatedText
 
-The `TruncatedText` component truncates text based on a specified number of
+The truncated text utility can truncate text based on a specified number of
 lines, provided via a prop. It offers two configurable options for revealing the
 full content:
 
 - Tooltip mode `with="tooltip"`: Displays the full text in a tooltip overlay on
-hover.
+  hover.
 
 - Expandable mode `with="expand"`: Reveals the complete content through
-collapsible “Read more” / “Read less” toggles. These labels can be customized
-using the `expand-label` and `collapse-label` attributes on the component.
+  collapsible “Read more” / “Read less” toggles. These labels can be customized
+  using the `expand-label` and `collapse-label` attributes on the component.
 
 > 💡 Check our
 > [Stackblitz](https://stackblitz.com/github/carbon-design-system/ibm-products/tree/main/packages/ibm-products-web-components/examples/truncated-text)
@@ -25,7 +25,7 @@ using the `expand-label` and `collapse-label` attributes on the component.
 
 ## Default with tooltip
 
-<Canvas of={TruncatedText.WithTooltip} />
+<Canvas of={TruncatedText.Default} />
 
 ## With expand
 
