chore: “usage guidelines”

--- a/packages/ibm-products/src/components/DragAndDrop/DragAndDrop.mdx
+++ b/packages/ibm-products/src/components/DragAndDrop/DragAndDrop.mdx
@@ -4,7 +4,7 @@ import * as stories from './DragAndDrop.stories';
 
 # Drag and drop
 
-[Drag and drop usage guidelines](https://pages.github.ibm.com/carbon/ibm-products/patterns/drag-and-drop/usage/)
+[Usage guidelines](https://pages.github.ibm.com/carbon/ibm-products/patterns/drag-and-drop/usage/)
 
 ## Table of Contents
 
