--- a/packages/ibm-products/src/components/Toolbar/Toolbar.mdx
+++ b/packages/ibm-products/src/components/Toolbar/Toolbar.mdx
@@ -5,7 +5,7 @@ import * as stories from './Toolbar.stories';
 
 # Toolbar
 
-[Toolbar usage guidelines](https://pages.github.ibm.com/carbon/ibm-products/components/toolbar/usage/)
+[Usage guidelines](https://pages.github.ibm.com/carbon/ibm-products/components/toolbar/usage/)
 
 ## Table of Contents
 
