--- a/packages/ibm-products/src/components/AboutModal/AboutModal.mdx
+++ b/packages/ibm-products/src/components/AboutModal/AboutModal.mdx
@@ -6,7 +6,7 @@ import { stackblitzPrefillConfig } from '../../../previewer/codePreviewer';
 
 # About Modal
 
-[AboutModal usage guidelines](https://pages.github.ibm.com/carbon/ibm-products/components/about-modal/usage/) | [Carbon Modal usage guidelines](https://www.carbondesignsystem.com/components/modal/usage) | [Carbon Modal documentation](https://react.carbondesignsystem.com/?path=/docs/components-modal)
+[Usage guidelines](https://pages.github.ibm.com/carbon/ibm-products/components/about-modal/usage/) | [Carbon modal usage guidelines](https://www.carbondesignsystem.com/components/modal/usage) | [Carbon modal documentation](https://react.carbondesignsystem.com/?path=/docs/components-modal)
 
 ## Table of Contents
 
