--- a/packages/ibm-products/src/components/Coachmark/Coachmark.mdx
+++ b/packages/ibm-products/src/components/Coachmark/Coachmark.mdx
@@ -7,7 +7,7 @@ import * as CoachmarkStories from './Coachmark.stories';
 
 # Coachmark
 
-[Coachmark usage guidelines](https://pages.github.ibm.com/carbon/ibm-products/components/onboarding/coachmark/usage/)
+[Usage guidelines](https://pages.github.ibm.com/carbon/ibm-products/components/onboarding/coachmark/usage/)
 
 ## Table of Contents
 
