--- a/packages/ibm-products/src/components/ConditionBuilder/ConditionBuilder.mdx
+++ b/packages/ibm-products/src/components/ConditionBuilder/ConditionBuilder.mdx
@@ -5,7 +5,7 @@ import * as stories from './ConditionBuilder.stories';
 
 # ConditionBuilder
 
-[ConditionBuilder usage guidelines](https://pages.github.ibm.com/carbon/ibm-products/components/condition-builder/usage/)
+[Usage guidelines](https://pages.github.ibm.com/carbon/ibm-products/components/condition-builder/usage/)
 
 ## Table of Contents
 
