--- a/packages/ibm-products/src/components/GetStartedCard/GetStartedCard.mdx
+++ b/packages/ibm-products/src/components/GetStartedCard/GetStartedCard.mdx
@@ -5,7 +5,7 @@ import * as stories from './GetStartedCard.stories';
 
 # GetStartedCard
 
-[Get started card usage guidelines](https://pages.github.ibm.com/carbon/ibm-products/patterns/onboarding-flows/orientation/#get-started-card)
+[Usage guidelines](https://pages.github.ibm.com/carbon/ibm-products/patterns/onboarding-flows/orientation/#get-started-card)
 
 ## Table of Contents
 
