chore: update website URLs

--- a/packages/ibm-products/src/components/UserAvatar/UserAvatar.mdx
+++ b/packages/ibm-products/src/components/UserAvatar/UserAvatar.mdx
@@ -5,7 +5,7 @@ import * as UserAvatarStories from './UserAvatar.stories';
 
 # UserAvatar
 
-[UserAvatar usage guidelines](https://pages.github.ibm.com/carbon/ibm-products/components/user-avatar/usage/)
+[Usage guidelines](https://pages.github.ibm.com/carbon/ibm-products/components/user-avatar/usage/)
 
 ## Table of Contents
 
