docs: convert onboarding components to mdx

--- a/packages/ibm-products/src/components/GetStartedCard/GetStartedCard.mdx
+++ b/packages/ibm-products/src/components/GetStartedCard/GetStartedCard.mdx
@@ -15,29 +15,21 @@ import * as stories from './GetStartedCard.stories';
 
 ## Overview
 
-<Canvas>
-  <Story of={stories.Default} />
-</Canvas>
+<Canvas of={stories.Default} />
 
 ## Example usage
 
 ### with Sequence
 
-<Canvas>
-  <Story of={stories.withSequence} />
-</Canvas>
+<Canvas of={stories.withSequence} />
 
 ### with Media and Pictogram
 
-<Canvas>
-  <Story of={stories.withMediaAndPictogram} />
-</Canvas>
+<Canvas of={stories.withMediaAndPictogram} />
 
 ### with Media and Sequence
 
-<Canvas>
-  <Story of={stories.withMediaAndSequence} />
-</Canvas>
+<Canvas of={stories.withMediaAndSequence} />
 
 ## Code sample
 
