fix: drag and drop mdx stories

--- a/packages/ibm-products/src/components/DragAndDrop/DragAndDrop.mdx
+++ b/packages/ibm-products/src/components/DragAndDrop/DragAndDrop.mdx
@@ -31,36 +31,24 @@ customizing the order of columns in the Datagrid.
 
 ### Vertical list
 
-<Canvas>
-  <Story of={stories.verticalExample} />
-</Canvas>
+<Canvas of={stories.verticalExample} />
 
 ### Horizontal list
 
-<Canvas>
-  <Story of={stories.horizontalExample} />
-</Canvas>
+<Canvas of={stories.horizontalExample} />
 
 ### Grid
 
-<Canvas>
-  <Story of={stories.gridExample} />
-</Canvas>
+<Canvas of={stories.gridExample} />
 
 ### Grid, restrict drag to window edge
 
-<Canvas>
-  <Story of={stories.gridExampleRestrictToWindow} />
-</Canvas>
+<Canvas of={stories.gridExampleRestrictToWindow} />
 
 ### Grid, with large item
 
-<Canvas>
-  <Story of={stories.gridExampleLargeItem} />
-</Canvas>
+<Canvas of={stories.gridExampleLargeItem} />
 
 ### Grid, dashboard
 
-<Canvas>
-  <Story of={stories.gridDashboard} />
-</Canvas>
+<Canvas of={stories.gridDashboard} />
