--- a/packages/ibm-products-web-components/src/components/page-header/page-header.mdx
+++ b/packages/ibm-products-web-components/src/components/page-header/page-header.mdx
@@ -28,13 +28,13 @@ import '@carbon/web-components/es/components/button/index.js';
 
 ## Overview
 
-The `cds-page-header` is a large family of components, composed of three zones; the Breadcrumb, Content, and Tabs.
+The `c4p-page-header` is a large family of components, composed of three zones; the Breadcrumb, Content, and Tabs.
 
 <Canvas of={PageHeaderStories.Default} />
 
 ## Breadcrumb
 
-The `cds-page-header-breadcrumb` component is used to render the breadcrumb navigation area within the Pageheader.
+The `c4p-page-header-breadcrumb` component is used to render the breadcrumb navigation area within the Pageheader.
 It accepts `cds-breadcrumb` and `cds-breadcrumb-item` components as children to define the breadcrumb trail. Additionally, it has
 `content-actions` and` page-actions` slots, allowing for actions, such as `cds-button` or `cds-icon-button` — alongside
 the breadcrumb content.
@@ -43,16 +43,16 @@ the breadcrumb content.
 
 <Canvas of={PageHeaderStories.ContentWithContextualActionsAndPageActions} />
 
-The `cds-page-header-content` component defines the primary content area of the Pageheader, including the title, subtitle, and
+The `c4p-page-header-content` component defines the primary content area of the Pageheader, including the title, subtitle, and
 any supporting text or contextual actions. It accepts a `title` attribute to display the main heading and has an `icon` slot
-to show an icon adjacent to the title. Child components such as `cds-page-header-content-text` can be used to provide additional descriptive text.
+to show an icon adjacent to the title. Child components such as `c4p-page-header-content-text` can be used to provide additional descriptive text.
 To support use cases such as tags, `contextual-actions` slot can be to render components beside the content.
 `page-actions` slot allows integration of action buttons aligned with the content section.
 
 ```html
-<cds-page-header>
-  <cds-page-header-breadcrumb>...</cds-page-header-breadcrumb>
-  <cds-page-header-content
+<c4p-page-header>
+  <c4p-page-header-breadcrumb>...</c4p-page-header-breadcrumb>
+  <c4p-page-header-content
     title="Title">
     <div slot="contextual-actions">
       <cds-tag type="blue" size="lg">Tag</cds-tag>
@@ -62,11 +62,11 @@ To support use cases such as tags, `contextual-actions` slot can be to render co
         >Primary action ${Add16({ slot: 'icon' })}</cds-button
       >
     </div>
-    <cds-page-header-content-text subtitle="Subtitle">
+    <c4p-page-header-content-text subtitle="Subtitle">
       Content text.
-    </cds-page-header-content-text>
-  </cds-page-header-content>
-</cds-page-header>
+    </c4p-page-header-content-text>
+  </c4p-page-header-content>
+</c4p-page-header>
 ```
 
 ### Content With Hero Image
@@ -74,7 +74,7 @@ To support use cases such as tags, `contextual-actions` slot can be to render co
 <Canvas of={PageHeaderStories.ContentWithHeroImage} />
 
 When including a hero image within the Pageheader, the Carbon Grid classes will need to be utilitized. In addition,
-the `withinGrid` attribute has to be set in the `cds-page-header-content` and `cds-page-header-breadcrumb` components.
+the `withinGrid` attribute has to be set in the `c4p-page-header-content` and `c4p-page-header-breadcrumb` components.
 
 ```css
 @use '@carbon/grid';
@@ -84,19 +84,19 @@ the `withinGrid` attribute has to be set in the `cds-page-header-content` and `c
 ```
 
 ```html
-<cds-page-header>
+<c4p-page-header>
   <div class="cds--css-grid">
     <div class="cds--sm:col-span-4 cds--md:col-span-4 cds--lg:col-span-8 cds--css-grid-column">
-      <cds-page-header-breadcrumb within-grid border=false>...</cds-page-header-breadcrumb>
-      <cds-page-header-content
+      <c4p-page-header-breadcrumb within-grid border=false>...</c4p-page-header-breadcrumb>
+      <c4p-page-header-content
         within-grid
         title="Title"
         >
         ...
-      </cds-page-header-content>
+      </c4p-page-header-content>
       </div>
       <div class="cds--sm:col-span-0 cds--md:col-span-4 cds--lg:col-span-8 cds--css-grid-column">
-        <cds-page-header-hero-image>
+        <c4p-page-header-hero-image>
           <picture>
             <source
               srcset="..."
@@ -112,33 +112,33 @@ the `withinGrid` attribute has to be set in the `cds-page-header-content` and `c
               style="max-width:100%;height:auto"
             />
           </picture>
-        </cds-page-header-hero-image>
+        </c4p-page-header-hero-image>
       </div>
     </div>
   </div>
-</cds-page-header>
+</c4p-page-header>
 ```
 
 ## Tabs
 
-To render the Tabs zone, utilitize the `cds-page-header-tabs` component, passing in the `cds-tabs` and `cds-tab` components
-as within its `tabs` slot. Then set up the corresponding tab panel elements outside of `cds-page-header`.
+To render the Tabs zone, utilitize the `c4p-page-header-tabs` component, passing in the `cds-tabs` and `cds-tab` components
+as within its `tabs` slot. Then set up the corresponding tab panel elements outside of `c4p-page-header`.
 
 ```html
-<cds-page-header>
-  <cds-page-header-breadcrumb>...</cds-page-header-breadcrumb>
-  <cds-page-header-content>
+<c4p-page-header>
+  <c4p-page-header-breadcrumb>...</c4p-page-header-breadcrumb>
+  <c4p-page-header-content>
     ...
-  </cds-page-header-content>
-  <cds-page-header-tabs>
+  </c4p-page-header-content>
+  <c4p-page-header-tabs>
     <cds-tabs slot="tabs" value="tab-1">
       <cds-tab id="tab-1" target="tab-panel-1" value="tab-1"
         >Tab 1</cds-tab>
       <cds-tab id="tab-2" target="tab-panel-2" value="tab-2"
         >Tab 2</cds-tab>
     </cds-tabs>
-  </cds-page-header-tabs>
-</cds-page-header>
+  </c4p-page-header-tabs>
+</c4p-page-header>
 <div id="tab-panel-1" role="tabpanel" aria-labelledby="tab-1" hidden>
   Tab Panel 1
 </div>
@@ -151,42 +151,42 @@ as within its `tabs` slot. Then set up the corresponding tab panel elements outs
 
 <Canvas of={PageHeaderStories.TabBarWithTabsAndTags} />
 
-The `cds-page-header-tabs` component has a `tags` slot for tag components.
+The `c4p-page-header-tabs` component has a `tags` slot for tag components.
 
 ```html
-<cds-page-header>
-  <cds-page-header-breadcrumb>...</cds-page-header-breadcrumb>
-  <cds-page-header-content>
+<c4p-page-header>
+  <c4p-page-header-breadcrumb>...</c4p-page-header-breadcrumb>
+  <c4p-page-header-content>
     ...
-  </cds-page-header-content>
-  <cds-page-header-tabs>
+  </c4p-page-header-content>
+  <c4p-page-header-tabs>
     ...
     <div slot='tags'>
       <cds-tag type='blue' size='md'>Tag</cds-tag>
     </div>
-  </cds-page-header-tabs>
-</cds-page-header>
+  </c4p-page-header-tabs>
+</c4p-page-header>
 ```
 
 ## Component API
 
-<ArgTypes of="cds-page-header" />
+<ArgTypes of="c4p-page-header" />
 
-## `cds-page-header-breadcrumb`
+## `c4p-page-header-breadcrumb`
 
-<ArgTypes of="cds-page-header-breadcrumb" />
+<ArgTypes of="c4p-page-header-breadcrumb" />
 
-## `cds-page-header-content`
+## `c4p-page-header-content`
 
-<ArgTypes of="cds-page-header-content" />
+<ArgTypes of="c4p-page-header-content" />
 
-## `cds-page-header-content-text`
+## `c4p-page-header-content-text`
 
-<ArgTypes of="cds-page-header-content-text" />
+<ArgTypes of="c4p-page-header-content-text" />
 
-## `cds-page-header-tabs`
+## `c4p-page-header-tabs`
 
-<ArgTypes of="cds-page-header-tabs" />
+<ArgTypes of="c4p-page-header-tabs" />
 
 <Markdown>{`${cdnJs({ components: ['page-header'] })}`}</Markdown>
 
